--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
 		"classmap": [
 			"database"
 		],
+		"files": [
+	     	"app/Http/helpers.php"   
+        ],
 		"psr-4": {
 			"App\\": "app/"
 		}
